--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ Remember to smile, slow down, and keep your energy up!</textarea>
     let isScrolling = false;
     let lastFrameTime = 0;
     let countdownActive = false;
+    let dockAutoCollapsed = false;
 
     const wait = ms => new Promise(resolve => setTimeout(resolve, ms));
 
@@ -407,11 +408,12 @@ Remember to smile, slow down, and keep your energy up!</textarea>
       dockToggle.setAttribute('aria-expanded', expanded ? 'true' : 'false');
     };
 
-    setDockExpanded(false);
+    setDockExpanded(true);
 
     dockToggle.addEventListener('click', () => {
       const expanded = dock.classList.contains('collapsed');
       setDockExpanded(expanded);
+      dockAutoCollapsed = false;
     });
 
     const runCountdown = async () => {
@@ -602,6 +604,10 @@ Remember to smile, slow down, and keep your energy up!</textarea>
       recorder.onstop = () => {
         if (!recordedChunks.length) {
           setDownloadEnabled(false);
+          if (dockAutoCollapsed) {
+            setDockExpanded(true);
+            dockAutoCollapsed = false;
+          }
           return;
         }
         const blob = new Blob(recordedChunks, { type: mimeType || 'video/webm' });
@@ -611,11 +617,17 @@ Remember to smile, slow down, and keep your energy up!</textarea>
         downloadBtn.download = `teleprompter-${Date.now()}.${extension}`;
         setDownloadEnabled(true);
         updateStatus('Ready to download');
+        if (dockAutoCollapsed) {
+          setDockExpanded(true);
+          dockAutoCollapsed = false;
+        }
       };
       recordBtn.disabled = true;
       stopRecordBtn.disabled = true;
       setDownloadEnabled(false);
       updateStatus('Get ready');
+      const wasCollapsed = dock.classList.contains('collapsed');
+      dockAutoCollapsed = !wasCollapsed;
       setDockExpanded(false);
       await runCountdown();
       recorder.start();
