--- a/index.html
+++ b/index.html
@@ -438,6 +438,36 @@
     .preview-buttons button {
       flex: 1;
     }
+
+    /* Small camera preview (picture-in-picture) in dock */
+    .pip-camera {
+      width: 160px;
+      height: 90px;
+      border-radius: 0.75rem;
+      overflow: hidden;
+      background: #000;
+      border: 2px solid var(--accent);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .pip-camera video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .pip-camera.hidden {
+      display: none;
+    }
+
+    .status-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1rem;
+      color: var(--ink);
+      gap: 1rem;
+    }
   </style>
 </head>
 
@@ -466,6 +496,10 @@
         <div class="timestamp">Teleprompter Studio · Last refreshed: <span id="timestamp">—</span></div>
         <div class="status-bar">
           <span>Timer: <strong id="timer">00:00</strong></span>
+          <!-- Small camera preview -->
+          <div class="pip-camera hidden" id="pipCamera">
+            <video id="pipVideo" autoplay playsinline muted></video>
+          </div>
           <span class="badge" id="statusBadge">Standby</span>
         </div>
         <div class="button-row">
@@ -747,6 +781,10 @@ Remember to smile, slow down, and keep your energy up!</textarea>
     const cancelPreviewBtn = document.getElementById('cancelPreview');
     const confirmRecordBtn = document.getElementById('confirmRecord');
 
+    // Small pip camera in dock
+    const pipCamera = document.getElementById('pipCamera');
+    const pipVideo = document.getElementById('pipVideo');
+
     const showPreviewModal = () => {
       previewVideo.srcObject = stream;
       previewScriptText.textContent = scriptInput.value.trim().substring(0, 200) + (scriptInput.value.length > 200 ? '...' : '');
@@ -758,8 +796,10 @@ Remember to smile, slow down, and keep your energy up!</textarea>
     };
 
     const goFullScreen = () => {
-      // Move stream to main preview
+      // Move stream to main preview and pip camera
       preview.srcObject = stream;
+      pipVideo.srcObject = stream;
+      pipCamera.classList.remove('hidden');
       previewVideo.srcObject = null;
       hidePreviewModal();
       recordBtn.disabled = false;
@@ -775,6 +815,8 @@ Remember to smile, slow down, and keep your energy up!</textarea>
       }
       preview.srcObject = null;
       previewVideo.srcObject = null;
+      pipVideo.srcObject = null;
+      pipCamera.classList.add('hidden');
       recordBtn.disabled = true;
       updateStatus('Standby');
     });
