--- a/index.html
+++ b/index.html
@@ -468,6 +468,124 @@
       color: var(--ink);
       gap: 1rem;
     }
+
+    /* Mobile phone specific styles (max-width 480px targets phones, not iPads) */
+    @media (max-width: 480px) {
+      .teleprompter {
+        top: 2vh;
+        width: 96%;
+        height: 35vh;
+        padding: 1rem;
+        border-radius: 1rem;
+      }
+
+      .teleprompter-inner {
+        font-size: 1.1rem;
+        line-height: 1.3;
+        gap: 0.8rem;
+        padding-bottom: 30vh;
+      }
+
+      .control-dock {
+        width: 100%;
+        border-radius: 1.25rem 1.25rem 0 0;
+        padding: 1rem;
+        max-height: 60vh;
+        overflow-y: auto;
+      }
+
+      .control-dock.collapsed {
+        width: 100%;
+        padding: 0.5rem 1rem;
+      }
+
+      .button-row {
+        grid-template-columns: 1fr 1fr;
+        gap: 0.5rem;
+      }
+
+      button,
+      .ghost-button {
+        padding: 0.7rem 0.6rem;
+        font-size: 0.8rem;
+      }
+
+      .layout-split {
+        flex-direction: column;
+      }
+
+      .script-editor {
+        flex: 1 1 auto;
+      }
+
+      textarea {
+        min-height: 100px;
+        max-height: 150px;
+        font-size: 0.9rem;
+      }
+
+      .prompt-controls {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+      }
+
+      .prompt-controls button {
+        flex: 1 1 45%;
+      }
+
+      .pip-camera {
+        width: 100px;
+        height: 56px;
+      }
+
+      .status-bar {
+        flex-wrap: wrap;
+        gap: 0.5rem;
+        font-size: 0.85rem;
+      }
+
+      .recording-timer-overlay {
+        top: 0.75rem;
+        right: 0.75rem;
+        padding: 0.4rem 0.8rem;
+        gap: 0.4rem;
+      }
+
+      .recording-timer-overlay .rec-time {
+        font-size: 0.9rem;
+      }
+
+      .recording-timer-overlay .rec-dot {
+        width: 8px;
+        height: 8px;
+      }
+
+      .preview-container {
+        width: 95%;
+      }
+
+      .preview-video-wrap {
+        aspect-ratio: 4 / 3;
+      }
+
+      .preview-script {
+        max-height: 80px;
+        font-size: 0.85rem;
+      }
+
+      .countdown-overlay {
+        font-size: 3rem;
+      }
+
+      .hint {
+        font-size: 0.8rem;
+      }
+
+      .timestamp {
+        font-size: 0.75rem;
+      }
+    }
   </style>
 </head>
 
