--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
     body {
       margin: 0;
       font-family: "Space Grotesk", sans-serif;
-      min-height: 100vh;
+      height: 100vh;
+      overflow: hidden;
       background: linear-gradient(160deg, var(--bg-start), var(--bg-end));
       color: var(--ink);
     }
 
     .canvas {
-      position: relative;
-      min-height: 100vh;
+      position: fixed;
+      inset: 0;
       width: 100%;
+      height: 100%;
       overflow: hidden;
     }
 
@@ -369,16 +371,16 @@
     /* Preview Modal */
     /* Floating stop recording button */
     .floating-stop-btn {
-      position: absolute;
-      bottom: 2rem;
+      position: fixed;
+      bottom: 4rem;
       left: 50%;
       transform: translateX(-50%);
-      padding: 1rem 2rem;
+      padding: 0.85rem 1.75rem;
       background: var(--error);
       color: #fff;
       border: none;
       border-radius: 999px;
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
       font-family: inherit;
       cursor: pointer;
@@ -519,9 +521,9 @@
       }
 
       .floating-stop-btn {
-        bottom: 1rem;
-        padding: 0.75rem 1.5rem;
-        font-size: 0.95rem;
+        bottom: 3.5rem;
+        padding: 0.65rem 1.25rem;
+        font-size: 0.85rem;
       }
 
       .control-dock {
